# plex86

plex86/: .cvsignore  LICENSE  Makefile  README  Rules.make.in  configure  configure.in  doconfigure  donull
plex86/Documentation/: 00-INDEX  FAQ  PERFORMANCE  TODO  VERSIONS  nfs.txt  performance  quickie.txt  vm-criteria
plex86/guest-kernel/: Makefile
plex86/guest-kernel/linux/: .cvsignore  Makefile  halconsole.c  haldisk.c  halnet.c  initrd-makenodes  setup32-cmdline.c  setup32-entry.S  setup32.c
plex86/guest-user/: Makefile
plex86/host-kernel/: Makefile
plex86/host-kernel/freebsd/: GNUmakefile  Makefile  freebsd.c
plex86/host-kernel/include/: descriptor2.h  guest_context.h  guest_stack_context.h  hostos.h  io.h  monitor.h  paging.h  tss.h
plex86/host-kernel/linux/: Makefile  linux2.4.c  load_module.sh
plex86/host-kernel/netbsd/: _host-netbsd.c_
plex86/host-kernel/null/: Makefile  null.c
plex86/host-kernel/stubs/: Makefile  stubs.c
plex86/host-kernel/vmm/: Makefile
plex86/host-kernel/vmm/host-space/: Makefile  monitor.c
plex86/host-kernel/vmm/monitor-space/: Makefile  fault-mon.c  fault.c  io.c  monitor-mon.c  monitor.c  paging-mon.c  paging.c  panic-mon.c  panic.c  print-mon.c  print.c  x86-emu.c
plex86/host-kernel/vmm/nexus-space/: Makefile  nexus.S  util-nexus.c
plex86/host-user/: .cvsignore  Makefile  doit  doit-nfs  hal-user.c  hal-user.h  halconsole.c  haldisk.c  halnet.c  io.c  io.h  linuxvm.c  linuxvm.h  x86-emu.c  x86-emu.h
plex86/include/: config.h.in  descriptor.h  eflags.h  hal.h  linux-setup.h  plex86.h
plex86/misc/: helloVWorld.c  tuntap-sample-script
plex86/patches/: 2003-0420-pmenage
